--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <title></title>
-    <link rel="stylesheet" type="text/css" href="vendor/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="vendor/bootstrap/dist/css/bootstrap-theme.css" />
-    <script src="vendor/jquery/dist/jquery.js"></script>
+    <link rel="stylesheet" type="text/css" href="/vendor/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="/vendor/bootstrap/dist/css/bootstrap-theme.css" />
+    <script src="/vendor/jquery/dist/jquery.js"></script>
 
 </head>
 <body>
@@ -16,7 +16,7 @@
             <form method="post" action="/save">
                 <div class="form-group">
                     <label for="toDo">Task title</label>
-                    <input type="text" name="todo" class="form-control" id="toDo" placeholder="What am I going to do"/>
+                    <input type="text" value="{{if not .}}{{.}}{{end}}" name="todo" class="form-control" id="toDo" placeholder="What am I going to do"/>
                 </div>
                 <button type="submit" class="btn btn-primary">Save</button>
             </form>
