--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
                 {{range $todo := $todos}}
                     <li class="list-group-item">
                         <a href="/edit/{{.Title}}">{{$todo.Title}}</a>
+                        <a href="/delete/{{.Title}}" style="float:right;margin-top:-6px;" class="btn btn-danger btn-sm">Delete</a>
                     </li>
                 {{end}}
             </ul>
